# CLVisc3.1

./: README.md
CLSmoothSpec/inc/: cl_spec.h
CLSmoothSpec/src/: cl_spec.cpp  kernel_spec_csc.cl  main.cpp
polarization/: four_momentum.py  polarization.py
pyvisc/: CLVisc.py  after_burner.py  backend_opencl.py  bridge.py  bulkinfo.py  config.py  hydro.info  logo.py  mcglauber.py  smearing.py  spec.py  visc.py
pyvisc/CoLBT/: Jnu.py  spec_colbt.py
pyvisc/cornelius/: Makefile  hypersf.cpp  hypersf.h  main.cpp
pyvisc/eos/: chemical_potential.py  eos.py  eosq.py
pyvisc/eos/eos_table/neosB_small/: Untitled.ipynb
pyvisc/ini/mcglauber/: get_centrality.py
pyvisc/ini/trento/: __init__.py  auau160_cent.csv  auau165_cent.csv  auau95_cent.csv  centrality.py  collision.py
pyvisc/kernel/: eos_table.h  helper.h  kernel_IS.cl  kernel_bulkinfo.cl  kernel_bulkpr.cl  kernel_gaussian_smearing_new.cl  kernel_glauber.cl  kernel_hypersf.cl  kernel_hypersf_eos.cl  kernel_jet_eloss.cl  kernel_mcglauber.cl  kernel_polarization.cl  kernel_qu.cl  kernel_reduction.cl  kernel_trento.cl  kernel_visc.cl  kernel_visc_nb.cl  kernel_vorticity.cl  real_type.h
pyvisc/script/: average_event.py
sampler/analysis_code/: Calcspec.py  mcspec.py
sampler/sampler_cpu/: CMakeLists.txt
sampler/sampler_cpu/cmake/: FindGSL.cmake
sampler/sampler_cpu/src/: CMakeLists.txt  main.cc  particletype.cc  sampler.cc
sampler/sampler_cpu/src/include/: particletype.h  sampler.h
sampler/sampler_gpu/: CMakeLists.txt
sampler/sampler_gpu/inc/: cl_spec.h  cl_spinvector.h  distribution.h  helper.h
sampler/sampler_gpu/src/: Int.h  cl_spec.cpp  kernel_sample_particle.cl  main.cpp
spec/: const.py  main.py  mcspec.py  spec_new.py
tests/: test_gubser_ideal.py  test_gubser_ideal_b.py  test_gubser_ideal_nb.py  test_gubser_visc.py  test_mcglauber.py
tests/test_1+1D_with_Akihiko/: Untitled.ipynb  make_plots.py  music_input_test_baryon_diffusion  pipi.ipynb  test2.ipynb
